@@ -1,3 +1,5 @@
+- Refactor: Replace usage of ShiftType by CourseLoadType
+
 2.15.12 (19-07-2023)
 - Refactor: Rename invocation of TreasuryEvent::getAmountToPay to TreasuryEvent::getAmountWithVatToPay
 
